css fixes for readability

--- a/ui/index.css
+++ b/ui/index.css
@@ -9,6 +9,11 @@ ul {
     position: fixed;
     width: 100%;
 }
+
+#ratings{
+    color: white;
+}
+
 li {
     float: left;
 }
